--- a/cometd/modules/pom.xml
+++ b/cometd/modules/pom.xml
@@ -9,7 +9,7 @@
     <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-cometd</artifactId>
     <packaging>bundle</packaging>
-    <version>${atmosphere-version}</version>
+    <version>1.1.0-SNAPSHOT</version>
     <name>atmosphere-cometd</name>
     <url>https://github.com/Atmosphere/atmosphere</url>
     <build>
