--- a/guice/modules/pom.xml
+++ b/guice/modules/pom.xml
@@ -9,7 +9,7 @@
     <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-guice</artifactId>
     <packaging>jar</packaging>
-    <version>${atmosphere-version}</version>
+    <version>1.1.0-SNAPSHOT</version>
     <name>atmosphere-guice</name>
     <url>http://maven.apache.org</url>
     <dependencies>
