--- a/gwt/pom.xml
+++ b/gwt/pom.xml
@@ -10,7 +10,7 @@
     <groupId>atmosphere-extensions</groupId>
     <artifactId>atmosphere-gwt-project</artifactId>
     <name>atmosphere-gwt-project</name>
-    <version>${atmosphere-version}</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <url>https://github.com/Atmosphere/atmosphere-extensions/gwt</url>
