--- a/socketio/modules/pom.xml
+++ b/socketio/modules/pom.xml
@@ -9,7 +9,7 @@
 	<groupId>atmosphere-extensions</groupId>
 	<artifactId>atmosphere-socketio</artifactId>
 	<packaging>bundle</packaging>
-	<version>${atmosphere-version}</version>
+    <version>1.1.0-SNAPSHOT</version>
 	<name>atmosphere-socketio</name>
 	<url>https://github.com/Atmosphere/atmosphere</url>
 	<build>
