--- a/spring/modules/pom.xml
+++ b/spring/modules/pom.xml
@@ -8,7 +8,7 @@
     <groupId>atmosphere-extensions</groupId>
     <artifactId>atmosphere-spring</artifactId>
     <packaging>jar</packaging>
-    <version>${atmosphere-version}</version>
+    <version>1.1.0-SNAPSHOT</version>
     <name>atmosphere-spring</name>
     <url>https://github.com/Atmosphere/atmosphere</url>
 
