--- a/gwt/modules/pom.xml
+++ b/gwt/modules/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>atmosphere-extensions</groupId>
     <artifactId>atmosphere-gwt-project</artifactId>
-    <version>${atmosphere-version}</version>
+    <version>1.1.0-SNAPSHOT</version>
   </parent>
 
   <groupId>atmosphere-extensions</groupId>
