--- a/gwt/pom.xml
+++ b/gwt/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.atmosphere.extensions</groupId>
     <artifactId>atmosphere-gwt-project</artifactId>
     <name>atmosphere-gwt-project</name>
-    <version>${project.version}</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <url>https://github.com/Atmosphere/atmosphere-extensions/gwt</url>
@@ -51,34 +51,34 @@
             <dependency>
                 <groupId>org.atmosphere</groupId>
                 <artifactId>atmosphere-gwt-common</artifactId>
-                <version>${project.version}</version>
+                <version>1.1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere</groupId>
                 <artifactId>atmosphere-gwt-client</artifactId>
-                <version>${project.version}</version>
+                <version>1.1.0-SNAPSHOT</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere</groupId>
                 <artifactId>atmosphere-gwt-extra</artifactId>
-                <version>${project.version}</version>
+                <version>1.1.0-SNAPSHOT</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere</groupId>
                 <artifactId>atmosphere-gwt-server</artifactId>
-                <version>${project.version}</version>
+                <version>1.1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere</groupId>
                 <artifactId>atmosphere-gwt-poll</artifactId>
-                <version>${project.version}</version>
+                <version>1.1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere</groupId>
                 <artifactId>atmosphere-gwt-js</artifactId>
-                <version>${project.version}</version>
+                <version>1.1.0-SNAPSHOT</version>
                 <type>war</type>
                 <scope>runtime</scope>
             </dependency>
