--- a/gwt/modules/pom.xml
+++ b/gwt/modules/pom.xml
@@ -6,7 +6,7 @@
     <!-- synced to revision 144 of gwt-comet -->
 
     <parent>
-        <groupId>org.atmosphere</groupId>
+        <groupId>org.atmosphere.extensions</groupId>
         <artifactId>atmosphere-gwt-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
