--- a/socketio/modules/pom.xml
+++ b/socketio/modules/pom.xml
@@ -6,7 +6,7 @@
         <version>1.1.0-SNAPSHOT</version>
     </parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>atmosphere-extensions</groupId>
+	<groupId>org.atmosphere</groupId>
 	<artifactId>atmosphere-socketio</artifactId>
 	<packaging>bundle</packaging>
     <version>1.1.0-SNAPSHOT</version>
