--- a/spring/modules/pom.xml
+++ b/spring/modules/pom.xml
@@ -5,7 +5,7 @@
         <artifactId>atmosphere-extension-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
-    <groupId>atmosphere-extensions</groupId>
+    <groupId>org.atmosphere</groupId>
     <artifactId>atmosphere-spring</artifactId>
     <packaging>jar</packaging>
     <version>1.1.0-SNAPSHOT</version>
