--- a/jgroups/samples/pom.xml
+++ b/jgroups/samples/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extension-project</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0.beta1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
