--- a/spring/samples/spring-websocket/pom.xml
+++ b/spring/samples/spring-websocket/pom.xml
@@ -3,13 +3,13 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extension-project</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0.beta1</version>
         <relativePath>../../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.atmosphere.samples</groupId>
     <artifactId>atmosphere-spring-websocket</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0.beta1</version>
     <packaging>war</packaging>
 
     <properties>
