--- a/gwt/samples/gwt-demo/pom.xml
+++ b/gwt/samples/gwt-demo/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.atmosphere</groupId>
+        <groupId>org.atmosphere.extensions</groupId>
         <artifactId>atmosphere-gwt-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
         <relativePath>../..</relativePath>
