--- a/gwt/samples/gwt-jsdemo/pom.xml
+++ b/gwt/samples/gwt-jsdemo/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.atmosphere</groupId>
+        <groupId>org.atmosphere.extensions</groupId>
         <artifactId>atmosphere-gwt-project</artifactId>
         <version>1.1.0-SNAPSHOT</version>
         <relativePath>../..</relativePath>
@@ -29,7 +29,7 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>atmosphere-extensions</groupId>
+            <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-gwt-server</artifactId>
             <exclusions>
                 <exclusion>
