--- a/guice/pom.xml
+++ b/guice/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extension-project</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0.beta3</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.atmosphere.extensions</groupId>
     <name>atmosphere-guice-project</name>
     <artifactId>org.atmosphere.extensions.guice</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0.beta3</version>
     <packaging>pom</packaging>
     <url>https://github.com/Atmosphere/atmosphere-extensions/guice</url>
     <modules>
