--- a/spring/samples/spring-tiles/pom.xml
+++ b/spring/samples/spring-tiles/pom.xml
@@ -2,13 +2,13 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extension-project</artifactId>
-        <version>1.1.0.beta3</version>
+        <version>1.1.0-SNAPSHOT</version>
         <relativePath>../../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.atmosphere.samples</groupId>
     <artifactId>atmosphere-spring-tiles</artifactId>
-    <version>1.1.0.beta3</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>atmosphere-spring-tiles</name>
     <dependencies>
