--- a/gwt/modules/atmosphere-gwt-wrapper/pom.xml
+++ b/gwt/modules/atmosphere-gwt-wrapper/pom.xml
@@ -39,7 +39,7 @@
     </dependency>
     <dependency>
       <groupId>org.atmosphere</groupId>
-      <artifactId>atmosphere-javascript</artifactId>
+      <artifactId>atmosphere-jquery</artifactId>
       <version>1.1.0-SNAPSHOT</version>
       <type>war</type>
       <scope>runtime</scope>
