--- a/gwt/samples/gwt-wrapper-demo/pom.xml
+++ b/gwt/samples/gwt-wrapper-demo/pom.xml
@@ -39,6 +39,7 @@
                     <runTarget>http://localhost:8888/index.jsp</runTarget>
                     <noServer>false</noServer>
                     <sourcesOnPath>true</sourcesOnPath>
+                    <extraJvmArgs>-Djava.util.logging.config.file=${project.build.outputDirectory}/logging.properties</extraJvmArgs>
                 </configuration>
                 <executions>
                     <execution>
