--- a/guice/samples/di-guice-sample/pom.xml
+++ b/guice/samples/di-guice-sample/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>org.atmosphere</groupId>
             <artifactId>atmosphere-guice</artifactId>
-            <version>${atmosphere-version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.inject.extensions</groupId>
