--- a/gwt/modules/atmosphere-gwt-wrapper/pom.xml
+++ b/gwt/modules/atmosphere-gwt-wrapper/pom.xml
@@ -35,19 +35,19 @@
     <dependency>
       <groupId>org.atmosphere</groupId>
       <artifactId>atmosphere-runtime</artifactId>
-      <version>1.1.0-SNAPSHOT</version>
+      <version>${atmosphere-version}</version>
     </dependency>
     <dependency>
       <groupId>org.atmosphere</groupId>
       <artifactId>atmosphere-jquery</artifactId>
-      <version>1.1.0-SNAPSHOT</version>
+        <version>${atmosphere-version}</version>
       <type>war</type>
       <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.atmosphere</groupId>
       <artifactId>atmosphere-gwt-common</artifactId>
-      <version>1.1.0-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>    
     <dependency>
         <groupId>com.google.gwt</groupId>
