--- a/pom.xml
+++ b/pom.xml
@@ -254,6 +254,7 @@
 
     <modules>
         <module>gwt</module>
+		<module>gwt20</module>
         <module>guice/</module>
         <module>spring/</module>
         <module>jgroups/</module>
