--- a/gwt20/pom.xml
+++ b/gwt20/pom.xml
@@ -18,7 +18,7 @@
 
     <properties>
         <gwt-version>2.5.0</gwt-version>
-        <atmosphere-version>1.1.0-SNAPSHOT</atmosphere-version>
+        <atmosphere-version>1.1.0.RC1</atmosphere-version>
     </properties>
 
     <modules>
