--- a/gwt20/modules/atmosphere-gwt-jersey/pom.xml
+++ b/gwt20/modules/atmosphere-gwt-jersey/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.atmosphere.extensions</groupId>
     <artifactId>atmosphere-gwt20</artifactId>
-    <version>1.1.0.RC1</version>
+    <version>1.1.0-SNAPSHOT</version>
   </parent>
   <groupId>org.atmosphere.extensions</groupId>
   <artifactId>atmosphere-gwt-jersey</artifactId>
