--- a/gwt20/modules/pom.xml
+++ b/gwt20/modules/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.atmosphere.extensions</groupId>
         <artifactId>atmosphere-gwt-project20</artifactId>
-        <version>1.1.0.RC1</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>org.atmosphere.extensions</groupId>
