--- a/gwt20/pom.xml
+++ b/gwt20/pom.xml
@@ -4,14 +4,14 @@
     <parent>
         <groupId>org.atmosphere</groupId>
         <artifactId>atmosphere-extension-project</artifactId>
-        <version>1.1.0.RC1</version>
+        <version>1.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>org.atmosphere.extensions</groupId>
     <artifactId>atmosphere-gwt-project20</artifactId>
     <name>atmosphere-gwt-project20</name>
-    <version>1.1.0.RC1</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <url>https://github.com/Atmosphere/atmosphere-extensions/gwt20</url>
@@ -52,23 +52,23 @@
             <dependency>
                 <groupId>org.atmosphere.extensions</groupId>
                 <artifactId>atmosphere-gwt-common20</artifactId>
-                <version>1.1.0.RC1</version>
+                <version>1.1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere.extensions</groupId>
                 <artifactId>atmosphere-gwt-client20</artifactId>
-                <version>1.1.0.RC1</version>
+                <version>1.1.0-SNAPSHOT</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere.extensions</groupId>
                 <artifactId>atmosphere-gwt-server20</artifactId>
-                <version>1.1.0.RC1</version>
+                <version>1.1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere.extensions</groupId>
                 <artifactId>atmosphere-gwt-jersey</artifactId>
-                <version>1.1.0.RC1</version>
+                <version>1.1.0-SNAPSHOT</version>
             </dependency>			
             <dependency>
                 <groupId>com.google.gwt</groupId>
