--- a/gwt20/modules/atmosphere-gwt-client20/pom.xml
+++ b/gwt20/modules/atmosphere-gwt-client20/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.atmosphere.extensions</groupId>
     <artifactId>atmosphere-gwt20</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0.RC1</version>
   </parent>
   
   <groupId>org.atmosphere.extensions</groupId>
