--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>atmosphere-extension-project</artifactId>
     <packaging>pom</packaging>
     <name>atmosphere-extension-project</name>
-    <version>1.1.0.RC1</version>
+    <version>1.1.0-SNAPSHOT</version>
     <url>http://github.com/Atmosphere/atmosphere-extensions</url>
     <scm>
         <connection>scm:git:git@github.com:Atmosphere/atmosphere-extensions.git</connection>
@@ -473,7 +473,7 @@
     <properties>
         <jetty-version>6.1.22</jetty-version>
         <jersey-version>1.14</jersey-version>
-        <atmosphere-version>1.1.0.RC1</atmosphere-version>
+        <atmosphere-version>1.1.0-SNAPSHOT</atmosphere-version>
         <jaxb-version>2.1</jaxb-version>
         <jackson-version>1.3.1</jackson-version>
         <junit-version>3.8.1</junit-version>
