--- a/gwt20/pom.xml
+++ b/gwt20/pom.xml
@@ -35,6 +35,7 @@
                         <target>1.6</target>
                     </configuration>
                 </plugin>
+
             </plugins>
         </pluginManagement>
         <extensions>
@@ -51,28 +52,28 @@
             <dependency>
                 <groupId>org.atmosphere.extensions</groupId>
                 <artifactId>atmosphere-gwt20-common</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere.extensions</groupId>
                 <artifactId>atmosphere-gwt20-client</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>${project.version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere.extensions</groupId>
                 <artifactId>atmosphere-gwt20-server</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere.extensions</groupId>
                 <artifactId>atmosphere-gwt20-jersey</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere.extensions</groupId>
                 <artifactId>atmosphere-gwt20-jackson</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.gwt</groupId>
@@ -96,17 +97,20 @@
                 <groupId>org.atmosphere</groupId>
                 <artifactId>atmosphere-runtime</artifactId>
                 <version>${atmosphere-version}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere</groupId>
                 <artifactId>atmosphere-jersey</artifactId>
                 <version>${atmosphere-version}</version>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere.client</groupId>
                 <artifactId>jquery</artifactId>
                 <version>${javascript-version}</version>
                 <type>war</type>
+                <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>org.atmosphere</groupId>
